objects/Apttus__Term_Exception__c.object
<CustomObject>
    <description>Term Exceptions master table</description>
    <fields>
        <fullName>Apttus__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this exception currently active?</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Agreement_Types__c</fullName>
        <description>Applicable lIst of agreement types</description>
        <label>Agreement Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Approval_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Approval(s) required for this exception?  Will trigger approval processing.</description>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>Details and guidelines as to when this term exception should be used.</description>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Exception_Type__c</fullName>
        <description>Logical grouping of term exceptions.</description>
        <label>Exception Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Exception__c</fullName>
        <description>Description</description>
        <label>Exception</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__ReferenceId__c</fullName>
        <description>A unique external reference identifier</description>
        <externalId>true</externalId>
        <inlineHelpText>A unique external reference identifier</inlineHelpText>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Term Exception</label>
    <listViews>
        <fullName>Apttus__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus__Active__c</columns>
        <columns>Apttus__Approval_Required__c</columns>
        <columns>Apttus__Exception_Type__c</columns>
        <columns>Apttus__Exception__c</columns>
        <columns>Apttus__Agreement_Types__c</columns>
        <columns>Apttus__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TE-{0000}</displayFormat>
        <label>Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Term Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>